@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2004/08/28 23:10:34 grant Exp $
+# $NetBSD: Makefile,v 1.8 2004/09/03 10:19:17 abs Exp $
 
-DISTNAME=	pkg_chk-1.50
+DISTNAME=	pkg_chk-1.51
 CATEGORIES=	pkgtools
 MASTER_SITES=	# empty
 DISTFILES=	# empty
