@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7085 2004/09/02 21:56:32 xtraeme Exp $
+$NetBSD: CHANGES,v 1.7086 2004/09/03 10:19:58 abs Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4181,3 +4181,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Added suse91_gtk2-9.1 [recht 2004-09-02]
 	Added suse91_locale-9.1 [recht 2004-09-02]
 	Updated fluxbox to 0.9.10 [xtraeme 2004-09-02]
+	Updated pkg_chk to 1.51 [abs 2004-09-02]
+
